# tp_35

./: .gitignore  README.md  area.cpp  area.h  figura.h  main.cpp  task.md  win.h  window.cpp  window.h
example-2.7/: CMakeLists.txt  main.cpp  win.cpp  win.h
example-2.8/: CMakeLists.txt  main.cpp  win.cpp  win.h
example-2.9/: CMakeLists.txt  area.cpp  area.h  figura.cpp  figura.h  main.cpp  window.cpp  window.h
